--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     
     <div class="chat-container">
-        <img src="imgs/Logo - Doobay -Site.png" alt="Logo Doobay" style="max-width: 180px; margin: 0 auto; display: block;" />
+        <img src="" alt="" style="max-width: 180px; margin: 0 auto; display: block;" />
 
         <div id="messages" class="chat-messages"></div>
             
