--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rodrigo vieira ia</title>
+    <title>RODRIGO VIEIRA IA</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
     <div class="chat-container">
-        <img src="imgs/Agrupar 3.png" alt="mylogo" style="block; margin: 0 auto; width: 512px;">
+        <img src="imgs/Agrupar 3.png" alt="mylogo" style="display: block; margin: 0 auto; width: 512px;">
 
         <div id="messages" class="chat-messages"></div>
             
