--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     
     <div class="chat-container">
-        <img src="imgs/Agrupar 3.png" alt="mylogo" style="display: block; margin: 0 auto; width: 512px;">
+        <img src="imgs/2.png" alt="mylogo" style="display: block; margin: 0 auto; width: 512px;">
 
         <div id="messages" class="chat-messages"></div>
             
